<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:background="#cc4e5a6b"
    android:visibility="gone"
    android:id="@+id/marker_layout"
    android:layout_alignParentBottom="true"
    android:clickable="true">

    <ImageView
        android:id="@+id/info_img"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/img_border"
        android:src="@mipmap/a01"
        android:scaleType="fitXY"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@mipmap/bg_map_bottom">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_a01_01"
                android:textColor="#fff5eb"/>

            <TextView
                android:id="@+id/info_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_a01_02"
                android:textColor="#fff5eb"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/map_zan"
                android:clickable="true"/>

            <TextView
                android:id="@+id/info_zan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_zan_num"
                android:textColor="#fff5eb"
                android:layout_gravity="center"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>